[tool.poetry]
name = "diversity-similarity"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"
packages = [{include = "diversity_similarity"}]

[tool.poetry.dependencies]
python = "^3.9"
censusdis = "^0.12.2"
jupyterlab = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
